# PasswordManager

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  PasswordManager  README.md  conanfile.txt  docker-compose.yml  main.cpp  passwordManager.pro
.github/workflows/: c-cpp.yml  docker-image.yml
PasswordManager-main/: main.cpp
PasswordManager-main/src/DB/: initDB.cpp
PasswordManager-main/src/GUI/: GUI.hpp
src/DB/: Database.cpp  Database.hpp  SimpleCrypt.cpp  SimpleCrypt.hpp  explain.txt  initDB.cpp  initDB.hpp
src/GUI/: CMakeLists.txt  initGUI.cpp  initGUI.hpp  mainpage.cpp  mainpage.h  mainpage.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  passwordManager.pro  proje_tr_TR.ts
src/GUI/Pages/: editpage.cpp  editpage.h  login.cpp  login.h  mainpage.cpp  mainpage.h  signup.cpp  signup.h
src/GUI/UI/: editpage.ui  login.ui  mainpage.ui  signup.ui  ui_editpage.h  ui_login.h  ui_mainpage.h  ui_signup.h
